fix: header spacing desktop

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -69,6 +69,7 @@ header section > [aria-hidden='true'] {
   header section[data-expanded='true'] {
     grid-template:
       'title sections tools cart' var(--header-height) / auto 1fr max-content auto;
+    gap: 0;
     height: 0;
   }
 }
@@ -285,7 +286,6 @@ header .nav-tools ul {
   display: grid;
   grid-template-columns: 1fr max-content 1fr 1fr;
   gap: var(--spacing-40);
-  margin: 0 calc(-1 * var(--horizontal-spacing));
 }
 
 header .nav-tools ul li {
@@ -299,6 +299,7 @@ header .nav-cart li a.icon-wrapper,
 header .nav-tools li a.icon-wrapper {
   display: flex;
   flex-direction: column;
+  outline-offset: var(--spacing-40);
 }
 
 @media (width >= 800px) {
@@ -367,7 +368,8 @@ header .nav-tools .nav-tools-language button + ul {
   display: none;
   position: absolute;
   top: calc(100% - 1px);
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   width: 150px;
   border: 1px solid var(--color-gray-700);
   padding: var(--spacing-80);
@@ -460,7 +462,6 @@ header .nav-cart [data-cart-items]::after {
   top: 4px;
   left: 27px;
 }
-
 
 @media (width >= 1200px) {
   header .nav-cart {
